// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin-select: createStateSelector should return same output for dynamic changing state selector keys with same values 1`] = `
{
  "height": 60,
  "width": 90,
}
`;

exports[`plugin-select: createStateSelector should return same output for dynamic changing state selector keys with same values 2`] = `
{
  "dynamic": 1,
  "height": 60,
  "width": 90,
}
`;

exports[`plugin-select: createStateSelector should return same output for dynamic changing state selector keys with same values 3`] = `
{
  "dynamic": 1,
  "height": 60,
  "width": 90,
}
`;

exports[`plugin-select: createStateSelector should return same output for dynamic changing state selector keys with same values 4`] = `
{
  "height": 60,
  "width": 90,
}
`;

exports[`plugin-select: createStateSelector should select extra properties from state 1`] = `
{
  "height": 60,
  "width": 90,
}
`;

exports[`plugin-select: select should forward ref 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  },
  "width": 90,
  "height": 60
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  }
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with changed props 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 3,
  "settings": {
    "color": "red"
  },
  "width": 270,
  "height": 180
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with extraProps 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  },
  "width": 90,
  "height": 60
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with extraProps and own createStateSelector 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  },
  "width": 90,
  "height": 60
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with extraProps and own static methods 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  },
  "width": 90,
  "height": 60
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with extraProps and own static methods for forwardedSelect 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  },
  "forwardedRef": null,
  "width": 90,
  "height": 60
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with extraProps modifies by ownProps 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.5,
  "settings": {
    "color": "red"
  },
  "width": 45,
  "height": 30
}
  ref?: 
  false
</div>
`;

exports[`plugin-select: select should render component with extraProps replaced by ownProps 1`] = `
<div>
  {
  "props": "props",
  "multiplier": 0.25,
  "settings": {
    "color": "red",
    "newSettingsProp": true
  },
  "width": 90,
  "height": 60
}
  ref?: 
  false
</div>
`;
